// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

package proto;

// The User service definition.
service User {
  rpc GetInfo (GetInfoReq) returns (GetInfoReply) {}
  rpc SayHello (SayHelloReq) returns (SayHelloReply) {}
}

message GetInfoReq {
  uint64 id = 1;
}

message GetInfoReply {
  string name = 1;
}

message SayHelloReq {
  uint64 id = 1;
}

message SayHelloReply {
  string name = 1;
}